# mdbook-preprocessor-graphql-playground

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.html  LICENSE  LICENSE.md  License.html  PokeApi.html  README.md  TheStarWarsApi.html  Usage.html  Why.html  graphql-playground.css  graphql-playground.js  index.html  print.html  searcher-c2a407aa.js  searchindex-cda778a0.js  searchindex.js  searchindex.json  toc-23187df2.js  toc.html
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: audit.yml  book.yml  dependabot-approve-and-auto-merge.yml  msrv.yml  release.yml  rust.yml
.run/: Audit.run.xml  Book Build.run.xml  Book Serve.run.xml  Build Release.run.xml  Build.run.xml  Check Formatting.run.xml  Clean.run.xml  Clippy.run.xml  Install Locally.run.xml  Outdated.run.xml  Publish.run.xml  Update.run.xml
assets/: graphql-playground.js
book/: book.toml  graphql-playground.css  graphql-playground.js
book/src/: PokeApi.md  SUMMARY.md  TheStarWarsApi.md  Usage.md  Why.md
book/src/configs/: pokeapi.json
book/src/queries/: .graphqlconfig
book/src/queries/pokeapi/: .graphqlconfig  generation3-species.query.graphql  generations.query.graphql  schema.graphql
book/src/queries/swapi/: schema.graphql
configs/: swapi.json
queries/: all-films.query.graphql
queries/swapi/: all-planets.query.graphql  all-species.query.graphql
src/: main.rs
