[package]
name = "mdbook-preprocessor-graphql-playground"
description = "A preprocessor for mdbook to add GraphQL playgrounds."
version = "0.1.1"
edition = "2021"
authors = ["Andreas Schaeffer <andreas@schaeffernet.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aschaeffer/mdbook-preprocessor-graphql-playground"
documentation = "https://aschaeffer.github.io/mdbook-preprocessor-graphql-playground/"
keywords = ["mdbook", "mdbook-plugins", "mdbook-preprocessor", "graphql", "playground"]

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
chrono = "0.4"
log = "0.4"
mdbook = "0.4"
mdbook-preprocessor-boilerplate = "0.1"
serde = "1.0"
serde_json = "1.0"
tera = "1"
uuid = { version = "1.1", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

[[bin]]
name = "mdbook-graphql-playground"
path = "src/main.rs"
