[package]
name = "mdbook-preprocessor-graphql-playground"
description = "A preprocessor for mdbook to add GraphQL playgrounds."
version = "0.2.0"
edition = "2024"
authors = ["Andreas Schaeffer <andreas@schaeffernet.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aschaeffer/mdbook-preprocessor-graphql-playground"
documentation = "https://aschaeffer.github.io/mdbook-preprocessor-graphql-playground/"
keywords = ["mdbook", "mdbook-plugins", "mdbook-preprocessor", "graphql", "playground"]
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
chrono = "0.4"
log = "0.4"
mdbook-preprocessor = "0.5.1"
serde_json = "1.0"
tera = "1"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

[[bin]]
name = "mdbook-graphql-playground"
path = "src/main.rs"
